--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
 language: scala
 sudo: false
 scala:
-  - 2.12.6
+- 2.12.6
 jdk:
-  - oraclejdk8
+- oraclejdk8
 before_install:
-  - export PATH=${PATH}:./vendor/bundle
+- openssl aes-256-cbc -K $encrypted_3e0e738695ac_key -iv $encrypted_3e0e738695ac_iv -in travis-deploy-key.enc -out travis-deploy-key -d
+- chmod 600 travis-deploy-key
+- cp travis-deploy-key ~/.ssh/id_rsa
+- export PATH=${PATH}:./vendor/bundle
+install:
+- rvm use 2.2.8 --install --fuzzy
+- gem update --system
+- gem install sass
+- gem install jekyll -v 3.2.1
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION scalafmtCheck test:scalafmtCheck scalafmtSbtCheck tests/run
-
+- sbt ++$TRAVIS_SCALA_VERSION scalafmtCheck test:scalafmtCheck scalafmtSbtCheck tests/run
+after_success:
+- if [ "$TRAVIS_BRANCH" = "prototyping" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then bash publishMicrosite.sh; fi
