sketch of derivation

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,9 @@ auto-save-list
 tramp
 .\#*
 
-# Org-mode
-.org-id-locations
-*_archive
+#metals stuff
+.bloop
+.metals
 
 # flymake-mode
 *_flymake.*
