--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
 - rvm use 2.4.4 --install --fuzzy
 - gem update --system
 - gem install sass
+- gem install kramdown
 - gem install jekyll -v 3.8.3
 stages:
 - name: test
